Finished Code for tower game, but have an error with it showing on chrome.

--- a/gaming.html
+++ b/gaming.html
@@ -44,6 +44,46 @@
 
     <div class="container">
         <div class="row row-content">
+            <div class="col-12 col-lg-4 mt-1">
+                <div class="card">
+                    <img src="img/Treez.jpg" class="card-img-top h-100 w-100" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Chop Tree'z Idle Game</h5>
+                        <p class="card-text">This is an Idle game centered around chopping down the forest.
+                            The longer played the better the upgrades, but beware of the wraith of Mother nature.</p>
+                        <a href="Lumberjack.html" target="_blank" class="btn btn-primary">Play Game</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 ">
+                <div class="card">
+                    <img src="img/spotMe.png" class="card-img-top h-100 w-100" height="215" style="border:dashed 1px white;" alt="Smiling Faces">
+                    <div class="card-body">
+                        <h5 class="card-title mt-2">Spot The Difference</h5>
+                        <p class="card-text">
+                            Discover all the differences you can find in two similar pictures.
+                            Each time you spot a difference, just tap on the screen.
+                            if you do not tap the right spot, it's game over!</p>
+                        <a href="matching-game.html" target="_blank" class="btn btn-primary">Play Game</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 ">
+                <div class="card">
+                    <img src="img/Tower.png" class="card-img-top w-100" height="250px" alt="...">
+                    <div class="card-body" style="height: 250px;">
+                        <h5 class="card-title">Stack em All</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                            <a href="#" class="btn btn-primary">Play Game</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--<div class="container">
+        <div class="row row-content">
             <div class="card-deck">
                 <div class="card">
                     <img class="card-img-top h-100 w-100" src="img/Treez.jpg" alt="Card image cap">
@@ -54,19 +94,28 @@
                         </p>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-dark text-primary"> <small> $1.99</small> </button>
+                        <button class="btn btn-dark text-primary"> <small>Play Game</small> </button>
                     </div>
                     <div class="card-footer">
-                        <small class="text-muted">Last updated 10 mins ago</small>
+                        <small class="text-muted">Last updated 2 days ago</small>
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" style="border:solid 2px;" height="300" src="img/spotMe.png"
+                        alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.
+                        <h5 class="card-title">Spot The Difference</h5>
+                        <p class="card-text">
+                            The goal is simple: Search and Discover all the differences you can find in two similar
+                            pictures.
+                            Each time you spot a difference, just tap on the screen. Be careful, if you do not tap the
+                            right spot,
+                            it's game over!
                         </p>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-dark text-success"> <a href="matching-game.html" target="_parent">Play
+                                Game</a> </button>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
@@ -88,6 +137,7 @@
             </div>
         </div>
     </div>
+-->
 
 
 
