Added games and news, also added forum to NavBar

--- a/gaming.html
+++ b/gaming.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <style>
+        body{
+        width: 100%;
+        background:url('img/Hero-Gaming-3.png');
+        background-size: cover;
+        }
+      </style>
     <title>PC & Mobile Games</title>
 </head>
 
@@ -36,112 +43,101 @@
                         <a class="nav-link" href="#">
                             <i class="fa fa-gamepad fa-lg"></i> Gaming</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-archive fa-lg"></i> Forum</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
 
-    <div class="container">
+    <div class="container mt-3">
         <div class="row row-content">
-            <div class="col-12 col-lg-4 mt-1">
+            <div class="col-12 col-lg-4 mt-3">
                 <div class="card">
                     <img src="img/Treez.jpg" class="card-img-top h-100 w-100" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Chop Tree'z Idle Game</h5>
                         <p class="card-text">This is an Idle game centered around chopping down the forest.
                             The longer played the better the upgrades, but beware of the wraith of Mother nature.</p>
-                        <a href="Lumberjack.html" target="_blank" class="btn btn-primary">Play Game</a>
+                        <a href="html/Lumberjack.html" target="_blank" class="btn btn-primary">Play Game</a>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-4 ">
+            <div class="col-12 col-lg-4 mt-3 ">
                 <div class="card">
-                    <img src="img/spotMe.png" class="card-img-top h-100 w-100" height="215" style="border:dashed 1px white;" alt="Smiling Faces">
-                    <div class="card-body">
+                    <img src="img/spotMe.png" class="card-img-top h-100 w-100" height="220px" style="border:dashed 1px white;" alt="Smiling Faces">
+                    <div class="card-body h-25">
                         <h5 class="card-title mt-2">Spot The Difference</h5>
                         <p class="card-text">
                             Discover all the differences you can find in two similar pictures.
                             Each time you spot a difference, just tap on the screen.
-                            if you do not tap the right spot, it's game over!</p>
-                        <a href="matching-game.html" target="_blank" class="btn btn-primary">Play Game</a>
+                            if you do not tap the right spot, it's game over! </p>
+                        <a href="html/matching-game.html" target="_blank" class="btn btn-primary">Play Game</a>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-4 ">
+            <div class="col-12 col-lg-4 mt-3">
                 <div class="card">
-                    <img src="img/Tower.png" class="card-img-top w-100" height="250px" alt="...">
-                    <div class="card-body" style="height: 250px;">
+                    <img src="img/Tower.png" class="card-img-top w-100 h-0" height="215px" alt="Stacked Blocks">
+                    <div class="card-body h-25" >
                         <h5 class="card-title">Stack em All</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                            <a href="#" class="btn btn-primary">Play Game</a>
+                        <p class="card-text">Stack 3D blocks to a tower the higher and the straighter you stack the blocks, 
+                            the more points you earn. Sloppy placement will cut off the blocks  making them smaller.</p>
+                            <a href="#" class="btn btn-primary">Work in Progress...</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!--<div class="container">
+    <div class="container">
         <div class="row row-content">
-            <div class="card-deck">
+            <div class="col text-center pt-4">
+                <h3 style="font-weight: bold;"> Keep Scrolling for our Featured Game for the Month of November 2022.</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-12 mt-2">
                 <div class="card">
-                    <img class="card-img-top h-100 w-100" src="img/Treez.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Chop Tree'z Idle Game</h5>
-                        <p class="card-text">This is an Idle game centered around chopping down the forest.
-                            The longer played the better the upgrades, but beware of the wraith of Mother nature.
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <button class="btn btn-dark text-primary"> <small>Play Game</small> </button>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 2 days ago</small>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" style="border:solid 2px;" height="300" src="img/spotMe.png"
-                        alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Spot The Difference</h5>
-                        <p class="card-text">
-                            The goal is simple: Search and Discover all the differences you can find in two similar
-                            pictures.
-                            Each time you spot a difference, just tap on the screen. Be careful, if you do not tap the
-                            right spot,
-                            it's game over!
-                        </p>
-                    </div>
-                    <div class="card-footer">
-                        <button class="btn btn-dark text-success"> <a href="matching-game.html" target="_parent">Play
-                                Game</a> </button>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
-                </div>
-                <div class="card">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height
-                            action.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">Last updated 3 mins ago</small>
+                    <img src="img/GalaxyMainImage.png" class="card-img-top h-25 w-100 text-center" height="250px" alt="Galaxy Shooter">
+                    <div class="card-body" style="height: 250px;">
+                        <h5 class="card-title text-primary">Galaxy Shooter</h5>
+                        <p class="card-text">Earth's last hope is in your hands, take control of the lone 
+                            spaceship and protect Earth from alien swarms attack. Your goal will be quite challenging
+                            as you will have to save the Universe from its evil enemies. In this space shooting game,
+                            you will be facing a large number of enemies in the emptiness of space.</p>
+                            <a href="html/GalaxyShooter.html" class="btn btn-primary">Play Game</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
--->
 
-
-
-
+    <footer>
+        <div class="container bg-dark">
+          <div class="row">
+            <div class="col-6 col-sm-5 offset-1">
+              <h5>Links</h5>
+              <ul class="list-unstyled">
+                <li><a href="tech.html">Home page</a></li>
+                <li><a href="news.html">Latest news</a></li>
+                <li><a href="mailto: hopkins_ollen@yahoo.com">Contact us</a></li>
+              </ul>
+            </div>
+            <div class="col-6 col-sm-6 text-center">
+              <h5>Social</h5>
+              <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+              <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+              <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+              <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube fa-primary"></i></a>
+            </div>
+          </div>
+        </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
