--- a/tech.html
+++ b/tech.html
@@ -11,6 +11,13 @@
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
   <link rel="stylesheet" href="/css/styles.css" />
+  <style>
+    body{
+    width: 100%;
+    background:url('../img/Space.jpg');
+    background-size: cover;
+    }
+  </style>
   <title>Artificial Soul</title>
 </head>
 
@@ -21,7 +28,7 @@
         <div class="col">
           <h1 class="text-start pb-2">Artificial Souls Inc.</h1>
           <h2 class="mb-0">
-            Where We Discuss the Freedom Behind the Mystery of An Artificial Consciousness.
+            Where we discuss the latest Ai news.
           </h2>
         </div>
       </div>
@@ -47,6 +54,10 @@
               <i class="fa fa-gamepad fa-lg"></i> Gaming</a
             >
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="fa fa-archive fa-lg"></i> Forum</a>
+        </li>
         </ul>
       </div>
     </div>
@@ -61,10 +72,11 @@
         <div class="card-body">
           <h4 class="card-title offset-md-2 text-dark">What is Intelligence?</h4>
           <p class="card-text w-75">For Centuries, human intelligence down to its core is defined two ways.</p>
-          <ol class="list-group list-group-flush">
-            <li class="list-group-item text-light bg-black">Logical thinking</li>
-            <li class="list-group-item text-light bg-black">Empathy</li>
-          </ol>
+          <ul class="list-group list-group-flush offset-1">
+            <li>Logical</li>
+            <li>Emotional</li>
+            
+          </ul>
           <br>
           <p class="card-text w-75 d-none d-sm-block">
             Logical thinkers tend to analyze a situation or 
@@ -85,28 +97,36 @@
           <p class="card-text text-start">
             “Computers are incredibly fast, accurate and stupid; humans are incredibly slow, 
             inaccurate and brilliant; together they are powerful beyond imagination.” <br><em> — Albert Einstein</em></p>
+            <ol class="list-group list-group-flush text-light">
+              <li></li>
+              <li></li>
+            </ol>
           <p class="card-text w-75 d-none d-sm-block">
-            The logical thinking definition is analyzing a situation or 
-            problem using reason and coming up with potential solutions. 
-            Logical thinkers gather all the information they can, 
-            assess the facts, and then methodically decide the best way to move forward.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos temporibus, quis repellendus aliquam 
+            quibusdam quidem accusamus doloremque sit ullam pariatur ea, totam nisi explicabo labore nihil sequi 
+            rerum rem provident laborum magnam optio quia sint nesciunt repudiandae! In, libero. Quaerat.
           </p>
         </div>
       </div>
     </div>
   </div>
-  <div class="container text-start my-1">
+  <div class="container text-center my-1">
     <div class="row">
       <div class="card col-sm-12 col-md-12 my-md-1 bg-black">
         <div class="card-body">
           <h4 class="card-title text-md-center">Artificial Intelligence?</h4>
-          <p class="card-text text-center">For Centuries, human intelligence down to its core is defined two ways.</p>
-          
-          <p class="card-text w-75 d-none d-sm-block">
-            The logical thinking definition is analyzing a situation or 
-            problem using reason and coming up with potential solutions. 
-            Logical thinkers gather all the information they can, 
-            assess the facts, and then methodically decide the best way to move forward.
+          <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, officia.</p>
+          <ol class="list-group list-group-flush text-light">
+            <li></li>
+            <li></li>
+          </ol>
+          <p class="card-text w-75 offset-1 d-none d-sm-block">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ducimus impedit aut 
+            obcaecati eveniet minus reprehenderit quae dolorem libero. 
+            Repudiandae magnam blanditiis quis corporis laborum quam 
+            recusandae! Corrupti, qui harum. Maiores illum molestias,
+             mollitia temporibus blanditiis consequuntur aut ea, eaque 
+             eos sequi esse earum in, nostrum nam odio vero ipsa.
           </p>
         </div>
       </div>
@@ -114,14 +134,13 @@
   </div>
 
   <footer>
-    <div class="container">
+    <div class="container bg-dark">
       <div class="row">
         <div class="col-6 col-sm-5 offset-1">
-          <h5>Links</h5>
           <ul class="list-unstyled">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="tech.html">Home</a></li>
+            <li><a href="news.html">Latest news</a></li>
+            <li><a href="mailto: hopkins_ollen@yahoo.com">Contact us</a></li>
           </ul>
         </div>
         <div class="col-6 col-sm-6 text-center">
@@ -133,6 +152,7 @@
         </div>
       </div>
     </div>
+    </footer>
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
