--- a/html/Lumberjack.html
+++ b/html/Lumberjack.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/lumberjack.css">
+        <link rel="stylesheet" href="../css/lumberjack.css">
         <title>Idle Game</title>
     </head>
     <body>
@@ -45,6 +45,6 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="js/lumberjack.js"></script>
+        <script src="../js/lumberjack.js"></script>
     </body>
 </html>
