--- a/html/Towergame.html
+++ b/html/Towergame.html
@@ -33,6 +33,6 @@
     <script src="https://codepen.io/steveg3003/pen/zBVakw"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js" ></script>
-    <script src="Towergame.js"></script>
+    <script src="../js/TowerGame.js"></script>
 </body>
 </html>
